feat: standardizing UI elements and updating project files

--- a/public/index.html
+++ b/public/index.html
@@ -64,6 +64,11 @@
             <img src="logo_png.jpeg" alt="Nova Nataka Logo" class="nav-event-logo">
             Nova Nataka<span>.</span>
         </div>
+        <div class="hamburger" id="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
         <ul class="nav-links">
             <li><a href="#hero">Home</a></li>
             <li><a href="#about">About</a></li>
@@ -89,10 +94,7 @@
                 <div class="cosmic-orb"></div>
                 <img src="logo_png.jpeg" alt="Event Logo" class="hero-event-logo">
             </div>
-            <div class="scroll-indicator">
-                <div class="mouse"></div>
-                <p>Descend into the Legend</p>
-            </div>
+
         </section>
 
         <!-- Legend/About Section -->
@@ -299,11 +301,17 @@
         </div>
     </div>
 
-    <footer class="glass">
+    <footer>
         <img src="logo_png.jpeg" alt="Logos" class="footer-logo">
         <p style="color: var(--primary-color); font-weight: 700; letter-spacing: 1px; margin-bottom: 5px;">Conducted by
             Department of Computer Science & Engineering</p>
         <p>&copy; 2024 Nova Nataka. Born among the stars.</p>
+        <p class="credits" style="font-size: 0.9rem; opacity: 0.8; margin-top: 10px;">
+            MADE BY <span style="color: var(--primary-color);">GURUGOVINDH</span>,
+            <span style="color: var(--primary-color);">KRISHNAPRIYA</span>,
+            <span style="color: var(--primary-color);">NITIYASHREE</span> &
+            <span style="color: var(--primary-color);">HARRISRAJ</span>
+        </p>
         <div class="admin-link">
             <a href="/admin/download"
                 style="color: var(--text-muted); font-size: 0.8rem; text-decoration: none; margin-top: 10px; display: inline-block;">Admin:
