Enhance admin dashboard with delete functionality, Interstellar easter eggs, and rules section

--- a/public/admin.html
+++ b/public/admin.html
@@ -119,7 +119,11 @@
     <div class="admin-view">
         <div class="header-actions">
             <h1 class="section-title" style="text-align: left; margin: 0;">Live Registrations</h1>
-            <button onclick="fetchRegistrations()" class="btn btn-outline" id="refreshBtn">Refresh Data</button>
+            <div style="display: flex; gap: 10px;">
+                <button onclick="toggleAdminMode()" class="btn btn-outline"
+                    style="border-color: #777; color: #777; font-size: 0.8rem;">Admin Unlock</button>
+                <button onclick="fetchRegistrations()" class="btn btn-outline" id="refreshBtn">Refresh Data</button>
+            </div>
         </div>
 
         <div class="stats-grid">
@@ -154,6 +158,28 @@
     </div>
 
     <script>
+        let adminPassword = null;
+
+        function toggleAdminMode() {
+            if (document.body.classList.contains('admin-mode')) {
+                document.body.classList.remove('admin-mode');
+                adminPassword = null;
+                alert('Admin mode disabled.');
+                return;
+            }
+
+            const pw = prompt('Enter Admin Password:');
+            if (pw === null) return;
+
+            if (pw === 'admin123') {
+                document.body.classList.add('admin-mode');
+                adminPassword = pw;
+                alert('Admin mode activated.');
+            } else {
+                alert('Invalid password.');
+            }
+        }
+
         async function fetchRegistrations() {
             const btn = document.getElementById('refreshBtn');
             btn.innerText = 'Refreshing...';
@@ -178,9 +204,12 @@
                             <td>${reg['Lead Email (M1)']}</td>
                             <td>${reg['Lead College (M1)']}</td>
                             <td>
-                                <span class="status-badge ${isUpdated ? 'status-updated' : 'status-new'}">
-                                    ${isUpdated ? 'Edited' : 'New'}
-                                </span>
+                                <div class="action-cell">
+                                    <span class="status-badge ${isUpdated ? 'status-updated' : 'status-new'}">
+                                        ${isUpdated ? 'Edited' : 'New'}
+                                    </span>
+                                    <button class="btn-delete" onclick="deleteRegistration('${reg['Lead Email (M1)']}')">Delete</button>
+                                </div>
                             </td>
                             <td>${reg['Last Updated'] === 'Never' ? reg['Registration Date'] : reg['Last Updated']}</td>
                         </tr>
@@ -193,14 +222,56 @@
 
             } catch (err) {
                 console.error('Error:', err);
-                alert('Failed to load registrations. Is the server running?');
+                // alert('Failed to load registrations. Is the server running?');
             } finally {
                 btn.innerText = 'Refresh Data';
             }
         }
 
+        async function deleteRegistration(email) {
+            if (!adminPassword) {
+                alert('Please click "Admin Unlock" and enter password to delete.');
+                return;
+            }
+
+            if (!confirm(`Are you sure you want to delete the registration for ${email}?`)) {
+                return;
+            }
+
+            try {
+                const response = await fetch('/api/delete-registration', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ email, password: adminPassword })
+                });
+
+                let result;
+                const contentType = response.headers.get("content-type");
+                if (contentType && contentType.includes("application/json")) {
+                    result = await response.json();
+                } else {
+                    const text = await response.text();
+                    console.error("Non-JSON error response:", text);
+                    throw new Error(`Server Error (${response.status}): The server did not respond correctly.`);
+                }
+
+                if (response.ok) {
+                    alert('Registration deleted successfully.');
+                    fetchRegistrations();
+                } else {
+                    alert('Error: ' + (result.message || 'Unknown error.'));
+                }
+            } catch (err) {
+                console.error('Delete error:', err);
+                alert(err.message || 'Could not delete registration.');
+            }
+        }
+
         // Load on start
         window.onload = fetchRegistrations;
+
+        // Auto-refresh every 30 seconds for live updates
+        setInterval(fetchRegistrations, 30000);
     </script>
 </body>
 
