--- a/public/index.html
+++ b/public/index.html
@@ -27,20 +27,20 @@
     <!-- Background Slideshow -->
     <div id="bg-slideshow">
         <div class="slide active"
-            style="background-image: url('https://images.unsplash.com/photo-1570126688035-1e0adadb3107?q=80&w=2000&auto=format&fit=crop');">
-        </div> <!-- Black Hole -->
-        <div class="slide"
             style="background-image: url('https://images.unsplash.com/photo-1614313913007-2b4ae8ce32d6?q=80&w=2000&auto=format&fit=crop');">
-        </div> <!-- Wormhole/Lightseed -->
+        </div> <!-- The Wormhole -->
         <div class="slide"
             style="background-image: url('https://images.unsplash.com/photo-1462331940025-496dfbfc7564?q=80&w=2000&auto=format&fit=crop');">
-        </div> <!-- Grand Nebula -->
+        </div> <!-- Miller's Planet Aesthetic -->
         <div class="slide"
-            style="background-image: url('https://images.unsplash.com/photo-1446776811953-b23d57bd21aa?q=80&w=2000&auto=format&fit=crop');">
-        </div> <!-- Star Nursery -->
+            style="background-image: url('https://images.unsplash.com/photo-1506318137071-a8e063b4bcc0?q=80&w=2000&auto=format&fit=crop');">
+        </div> <!-- Tesseract Grid aesthetic -->
         <div class="slide"
-            style="background-image: url('https://images.unsplash.com/photo-1465101162946-4377e57745c3?q=80&w=2000&auto=format&fit=crop');">
-        </div> <!-- Deep Space Horizon -->
+            style="background-image: url('https://images.unsplash.com/photo-1570126688035-1e0adadb3107?q=80&w=2000&auto=format&fit=crop');">
+        </div> <!-- Gargantua Black Hole -->
+        <div id="secret-gargantua" class="slide"
+            style="background-image: url('https://images.unsplash.com/photo-1543722530-d2c3201371e7?q=80&w=2000&auto=format&fit=crop'); display: none; z-index: 50;">
+        </div> <!-- Hidden Easter Egg Slide -->
         <div class="bg-overlay"></div>
     </div>
 
@@ -72,6 +72,7 @@
         <ul class="nav-links">
             <li><a href="#hero">Home</a></li>
             <li><a href="#about">About</a></li>
+            <li><a href="#rules">Rules</a></li>
             <li><a href="#registration">Register</a></li>
             <li><a href="#admin" onclick="fetchRegistrations()">Dashboard</a></li>
         </ul>
@@ -91,8 +92,9 @@
                 </div>
             </div>
             <div class="hero-visual">
-                <div class="cosmic-orb"></div>
-                <img src="logo_png.jpeg" alt="Event Logo" class="hero-event-logo">
+                <div class="cosmic-orb" title="Time is relative... click to dilate"></div>
+                <img src="logo_png.jpeg" alt="Event Logo" class="hero-event-logo"
+                    title="Entering the Tesseract? (Triple click)">
             </div>
 
         </section>
@@ -124,6 +126,44 @@
                             Command the stage with the fire of a thousand suns and leave your mark on the constellation
                             of time.</p>
                         <span class="time-tag">Final Objective: Immortality</span>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Rules Section -->
+        <section id="rules" class="rules">
+            <div class="story-text-container">
+                <h2 class="section-title">THE COSMIC CODEX</h2>
+                <p class="story-paragraph">To navigate the stars, one must follow the laws of the universe. Hear the
+                    mandates of the Nova Nataka Council.</p>
+            </div>
+
+            <div class="rules-grid-container">
+                <div class="rules-grid">
+                    <div class="card glass reveal">
+                        <div class="card-icon">👥</div>
+                        <h3>Team Structure</h3>
+                        <p class="story-desc">Each team must consist of <strong>exactly three participants</strong>. No
+                            substitutions are allowed during the event.</p>
+                    </div>
+                    <div class="card glass reveal">
+                        <div class="card-icon">📜</div>
+                        <h3>Round-Specific Rules</h3>
+                        <p class="story-desc">Rules may vary by round and will be explained before each round begins.
+                            Participants must follow instructions given by the coordinators.</p>
+                    </div>
+                    <div class="card glass reveal">
+                        <div class="card-icon">⏳</div>
+                        <h3>Time & Rounds</h3>
+                        <p class="story-desc">Each team will have <strong>5 minutes</strong> in Round 1. Only qualified
+                            teams will advance to Round 2.</p>
+                    </div>
+                    <div class="card glass reveal">
+                        <div class="card-icon">🔇</div>
+                        <h3>Game Discipline</h3>
+                        <p class="story-desc">Phones and speech are allowed, but any action that disturbs other teams or
+                            disrupts the flow may result in disqualification.</p>
                     </div>
                 </div>
             </div>
@@ -188,23 +228,23 @@
 
                     <!-- Member 2 -->
                     <div class="member-section">
-                        <h4>Co-Pilot (Member 2 - Optional)</h4>
+                        <h4>Co-Pilot (Member 2)</h4>
                         <div class="form-grid">
                             <div class="form-group">
-                                <input type="text" id="m2_name" name="m2_name" placeholder="Name">
+                                <input type="text" id="m2_name" name="m2_name" placeholder="Name" required>
                             </div>
                             <div class="form-group">
                                 <input type="tel" id="m2_phone" name="m2_phone" placeholder="Phone Number"
-                                    pattern="[0-9]{10}">
+                                    pattern="[0-9]{10}" required>
                             </div>
                             <div class="form-group">
-                                <input type="text" id="m2_college" name="m2_college" placeholder="College">
+                                <input type="text" id="m2_college" name="m2_college" placeholder="College" required>
                             </div>
                             <div class="form-group">
-                                <input type="text" id="m2_dept" name="m2_dept" placeholder="Department">
+                                <input type="text" id="m2_dept" name="m2_dept" placeholder="Department" required>
                             </div>
                             <div class="form-group">
-                                <select id="m2_year" name="m2_year">
+                                <select id="m2_year" name="m2_year" required>
                                     <option value="" disabled selected>Select Year</option>
                                     <option value="1">1st Year</option>
                                     <option value="2">2nd Year</option>
@@ -217,23 +257,23 @@
 
                     <!-- Member 3 -->
                     <div class="member-section">
-                        <h4>Specialist (Member 3 - Optional)</h4>
+                        <h4>Specialist (Member 3)</h4>
                         <div class="form-grid">
                             <div class="form-group">
-                                <input type="text" id="m3_name" name="m3_name" placeholder="Name">
+                                <input type="text" id="m3_name" name="m3_name" placeholder="Name" required>
                             </div>
                             <div class="form-group">
                                 <input type="tel" id="m3_phone" name="m3_phone" placeholder="Phone Number"
-                                    pattern="[0-9]{10}">
+                                    pattern="[0-9]{10}" required>
                             </div>
                             <div class="form-group">
-                                <input type="text" id="m3_college" name="m3_college" placeholder="College">
+                                <input type="text" id="m3_college" name="m3_college" placeholder="College" required>
                             </div>
                             <div class="form-group">
-                                <input type="text" id="m3_dept" name="m3_dept" placeholder="Department">
+                                <input type="text" id="m3_dept" name="m3_dept" placeholder="Department" required>
                             </div>
                             <div class="form-group">
-                                <select id="m3_year" name="m3_year">
+                                <select id="m3_year" name="m3_year" required>
                                     <option value="" disabled selected>Select Year</option>
                                     <option value="1">1st Year</option>
                                     <option value="2">2nd Year</option>
@@ -256,7 +296,11 @@
         <section id="admin" class="admin-section">
             <div class="header-actions">
                 <h2 class="section-title" style="text-align: left; margin: 0;">Live Registrations</h2>
-                <button onclick="fetchRegistrations()" class="btn btn-outline" id="refreshBtn">Refresh Data</button>
+                <div class="header-btns" style="display: flex; gap: 10px;">
+                    <button onclick="toggleAdminMode()" class="btn btn-outline"
+                        style="border-color: #777; color: #777; font-size: 0.8rem;">Admin Access</button>
+                    <button onclick="fetchRegistrations()" class="btn btn-outline" id="refreshBtn">Refresh Data</button>
+                </div>
             </div>
 
             <div class="stats-grid">
@@ -297,6 +341,8 @@
             <div class="success-icon">✨</div>
             <h2>Registration Successful!</h2>
             <p>Your team is now part of the Nova Nataka stage. A confirmation email has been sent to your Team Lead.</p>
+            <p style="font-size: 0.7rem; opacity: 0.5; margin-top: 15px; font-style: italic;">"Love is the one thing
+                that transcends time and space." — Pilot Hint: Type 'stay'</p>
             <button class="btn btn-primary" onclick="closeModal()">Awesome!</button>
         </div>
     </div>
@@ -307,11 +353,15 @@
             Department of Computer Science & Engineering</p>
         <p>&copy; 2024 Nova Nataka. Born among the stars.</p>
         <p class="credits" style="font-size: 0.9rem; opacity: 0.8; margin-top: 10px;">
-            MADE BY <span style="color: var(--primary-color);">GURUGOVINDH</span>,
+            MADE BY : <span style="color: var(--primary-color);">GURU GOVINDH</span>,
             <span style="color: var(--primary-color);">KRISHNAPRIYA</span>,
-            <span style="color: var(--primary-color);">NITIYASHREE</span> &
-            <span style="color: var(--primary-color);">HARRISRAJ</span>
+            <span style="color: var(--primary-color);">NITIYASHREE</span>,
+            <span style="color: var(--primary-color);">DANIYA ALEX</span> &
+            <span style="color: var(--primary-color);">HARRIS RAJ</span>
         </p>
+        <div class="egg-hint-box">
+            Transmission Received: Try typing <span>'murph' or 'stay'</span> or clicking the <span>Cosmic Orb</span>.
+        </div>
         <div class="admin-link">
             <a href="/admin/download"
                 style="color: var(--text-muted); font-size: 0.8rem; text-decoration: none; margin-top: 10px; display: inline-block;">Admin:
@@ -320,69 +370,6 @@
     </footer>
 
     <script src="script.js"></script>
-    <script>
-        async function fetchRegistrations() {
-            const btn = document.getElementById('refreshBtn');
-            if (btn) btn.innerText = 'Refreshing...';
-            try {
-                const response = await fetch('/api/registrations');
-                const data = await response.json();
-
-                const body = document.getElementById('regBody');
-                if (!body) return;
-                body.innerHTML = '';
-
-                let totalParticipants = 0;
-
-                data.forEach(reg => {
-                    totalParticipants += parseInt(reg['Total Members'] || 1);
-                    const isUpdated = (reg['Last Updated'] && reg['Last Updated'] !== 'Never');
-
-                    const row = `
-                        <tr>
-                            <td><strong>${reg['Team ID']}</strong></td>
-                            <td>${reg['Team Name']}</td>
-                            <td>${reg['Lead Name (M1)']}</td>
-                            <td>${reg['Lead Email (M1)']}</td>
-                            <td>${reg['Lead College (M1)']}</td>
-                            <td>
-                                <span class="status-badge ${isUpdated ? 'status-updated' : 'status-new'}">
-                                    ${isUpdated ? 'Edited' : 'New'}
-                                </span>
-                            </td>
-                            <td>${(!reg['Last Updated'] || reg['Last Updated'] === 'Never') ? reg['Registration Date'] : reg['Last Updated']}</td>
-                        </tr>
-                    `;
-                    body.innerHTML += row;
-                });
-
-                document.getElementById('totalTeams').innerText = data.length;
-                document.getElementById('totalParticipants').innerText = totalParticipants;
-
-            } catch (err) {
-                console.error('Error:', err);
-            } finally {
-                if (btn) btn.innerText = 'Refresh Data';
-            }
-        }
-
-        // Background Slideshow Logic
-        const slides = document.querySelectorAll('.slide');
-        let currentSlide = 0;
-
-        function nextSlide() {
-            slides[currentSlide].classList.remove('active');
-            currentSlide = (currentSlide + 1) % slides.length;
-            slides[currentSlide].classList.add('active');
-        }
-
-        setInterval(nextSlide, 3000); // 3 seconds interval
-
-        // Load data when page loads if we land on #admin
-        window.addEventListener('load', () => {
-            if (window.location.hash === '#admin') fetchRegistrations();
-        });
-    </script>
 </body>
 
 </html>
