Update registration workflow, restrict admin views, and refine event rules

--- a/public/index.html
+++ b/public/index.html
@@ -168,8 +168,9 @@
                     <div class="card glass reveal">
                         <div class="card-icon">🔇</div>
                         <h3>Game Discipline</h3>
-                        <p class="story-desc">Phones and speech are allowed, but any action that disturbs other teams or
-                            disrupts the flow may result in disqualification.</p>
+                        <p class="story-desc">The usage of <strong>mobile phones is strictly prohibited</strong> during
+                            the event. Any action that disturbs other teams or disrupts the flow may result in
+                            disqualification.</p>
                     </div>
                 </div>
             </div>
@@ -186,7 +187,7 @@
 
                 <!-- Quick Edit Search -->
                 <div class="edit-search-box">
-                    <p>Already in the system? Re-access your terminal:</p>
+                    <p>Already in the system? Re-access your terminal (to edit your registration):</p>
                     <div class="search-input-group">
                         <input type="email" id="searchEmail" placeholder="Commander Email">
                         <button type="button" id="loadBtn" class="btn btn-secondary">Access Terminal</button>
@@ -347,6 +348,7 @@
             <div class="success-icon">✨</div>
             <h2>Registration Successful!</h2>
             <p>Your team is now part of the Nova Nataka stage. A confirmation email has been sent to your Team Lead.</p>
+
             <p style="font-size: 0.7rem; opacity: 0.5; margin-top: 15px; font-style: italic;">"Love is the one thing
                 that transcends time and space." — Pilot Hint: Type 'stay'</p>
             <button class="btn btn-primary" onclick="closeModal()">Awesome!</button>
@@ -357,11 +359,11 @@
         <img src="logo_png.jpeg" alt="Logos" class="footer-logo">
         <p style="color: var(--primary-color); font-weight: 700; letter-spacing: 1px; margin-bottom: 5px;">Conducted by
             Department of Computer Science & Engineering</p>
-        <p>&copy; 2024 Nova Nataka. Born among the stars.</p>
+        <p>&copy; 2026 Nova Nataka. Born among the stars.</p>
         <p class="credits" style="font-size: 0.9rem; opacity: 0.8; margin-top: 10px;">
             MADE BY : <span style="color: var(--primary-color);">GURU GOVINDH</span>,
             <span style="color: var(--primary-color);">KRISHNAPRIYA</span>,
-            <span style="color: var(--primary-color);">NITIYASHREE</span>,
+            <span style="color: var(--primary-color);">NITHIYASHREE</span>,
             <span style="color: var(--primary-color);">DANIYA ALEX</span> &
             <span style="color: var(--primary-color);">HARRIS RAJ</span>
         </p>
