feat: enhance background slideshow, update to premium cyber-celestial theme, and improve contrast

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;800&family=Montserrat:wght@400;700&family=Syne:wght@400;700;800&family=Space+Grotesk:wght@400;700&family=Michroma&family=Cinzel:wght@400;700;900&family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=Syncopate:wght@400;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;800&family=Montserrat:wght@400;700&family=Syne:wght@400;700;800&family=Space+Grotesk:wght@300;400;700&family=Michroma&family=Cinzel:wght@400;700;900&family=Syncopate:wght@400;700&family=Bormi:wght@400;700&family=Unbounded:wght@400;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/your-font-awesome-kit.js" crossorigin="anonymous"></script>
@@ -28,19 +28,28 @@
     <div id="bg-slideshow">
         <div class="slide active"
             style="background-image: url('https://images.unsplash.com/photo-1614313913007-2b4ae8ce32d6?q=80&w=2000&auto=format&fit=crop');">
-        </div> <!-- The Wormhole -->
+        </div> <!-- Wormhole -->
         <div class="slide"
             style="background-image: url('https://images.unsplash.com/photo-1462331940025-496dfbfc7564?q=80&w=2000&auto=format&fit=crop');">
-        </div> <!-- Miller's Planet Aesthetic -->
+        </div> <!-- Nebula -->
         <div class="slide"
             style="background-image: url('https://images.unsplash.com/photo-1506318137071-a8e063b4bcc0?q=80&w=2000&auto=format&fit=crop');">
-        </div> <!-- Tesseract Grid aesthetic -->
+        </div> <!-- Stars -->
+        <div class="slide"
+            style="background-image: url('https://images.unsplash.com/photo-1451187580459-43490279c0fa?q=80&w=2000&auto=format&fit=crop');">
+        </div> <!-- Earth from Space -->
+        <div class="slide"
+            style="background-image: url('https://images.unsplash.com/photo-1534796636912-3b95b3ab5986?q=80&w=2000&auto=format&fit=crop');">
+        </div> <!-- Deep Space -->
+        <div class="slide"
+            style="background-image: url('https://images.unsplash.com/photo-1518066000714-58c45f1a2c0a?q=80&w=2000&auto=format&fit=crop');">
+        </div> <!-- Galaxy -->
         <div class="slide"
             style="background-image: url('https://images.unsplash.com/photo-1570126688035-1e0adadb3107?q=80&w=2000&auto=format&fit=crop');">
-        </div> <!-- Gargantua Black Hole -->
+        </div> <!-- Black Hole -->
         <div id="secret-gargantua" class="slide"
             style="background-image: url('https://images.unsplash.com/photo-1543722530-d2c3201371e7?q=80&w=2000&auto=format&fit=crop'); display: none; z-index: 50;">
-        </div> <!-- Hidden Easter Egg Slide -->
+        </div> <!-- Easter Egg -->
         <div class="bg-overlay"></div>
     </div>
 
